<?xml version="1.0" encoding="ISO-8859-1"?>
<!--

    Copyright 2006-2026 the original author or authors.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.objenesis</groupId>
    <artifactId>objenesis-parent</artifactId>
    <version>3.6-SNAPSHOT</version>
  </parent>

  <artifactId>objenesis-module-test</artifactId>
  <name>Objenesis Module Test</name>
  <description>Test the Objenesis works with the module system</description>

  <properties>
    <java.version>9</java.version>
    <maven.deploy.skip>true</maven.deploy.skip>
    <argLine>--add-modules jdk.unsupported --add-opens java.base/java.util=org.objenesis</argLine>
    <!-- It should be the default, but I just want to make it explicit -->
    <surefire.useModulePath>true</surefire.useModulePath>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.objenesis</groupId>
      <artifactId>objenesis</artifactId>
      <version>${project.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.keyboardsamurais.maven</groupId>
        <artifactId>maven-timestamp-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-remote-resources-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <configuration>
          <!-- The AppTest unit test should do the same thing but for some reason, it works without add-modules jdk.unsupported -->
          <!-- So I add this other test on top of it to make sure it works -->
          <executable>java</executable>
          <arguments>
            <argument>--add-modules</argument>
            <argument>jdk.unsupported</argument>
            <argument>--add-opens</argument>
            <argument>java.base/java.util=org.objenesis</argument>
            <argument>--module-path</argument>
            <modulepath/>
            <argument>-m</argument>
            <argument>org.mymodule/org.mymodule.App</argument>
          </arguments>
        </configuration>
        <executions>
            <execution>
                <phase>test</phase>
                <goals>
                    <goal>exec</goal>
                </goals>
            </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
